tests/fixtures/invalid/none_sub_int.py
# Cannot subtract Int from None
x: int = None - 1
